[gd_scene load_steps=11 format=3 uid="uid://do6v3t70isonx"]

[ext_resource type="Script" path="res://scenes/ui/crafting_menu_listing.gd" id="1_82gia"]
[ext_resource type="Theme" uid="uid://usfabbbmsm3h" path="res://assets/themes/PotionCraftTheme.tres" id="1_dibny"]
[ext_resource type="Texture2D" uid="uid://3fi7oa62uert" path="res://assets/textures/potion/quartz_potion.png" id="2_475mh"]
[ext_resource type="Texture2D" uid="uid://c0f67wjooigon" path="res://assets/textures/resource/resource_fire.png" id="2_pn0g7"]
[ext_resource type="Texture2D" uid="uid://5cl3ivaiy1tn" path="res://assets/textures/resource/resource_shadow.png" id="3_6e1kf"]
[ext_resource type="Texture2D" uid="uid://bi6hufoa61ksj" path="res://assets/textures/resource/resource_wood.png" id="4_8rn05"]
[ext_resource type="Texture2D" uid="uid://cp74hu4ij71w1" path="res://assets/textures/resource/resource_stone.png" id="5_0x45c"]
[ext_resource type="Texture2D" uid="uid://b12vk7snwti44" path="res://assets/textures/resource/resource_fruit.png" id="6_j2ca6"]
[ext_resource type="Texture2D" uid="uid://q37qqy3fjdg2" path="res://assets/textures/resource/resource_quartz.png" id="7_b1tqv"]
[ext_resource type="PackedScene" uid="uid://bkupopcgs5qps" path="res://recipe_listing.tscn" id="8_m7dj6"]

[node name="CraftingMenuListing" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_82gia")
fire_crystal = ExtResource("2_pn0g7")
shadow_sand = ExtResource("3_6e1kf")
leaf = ExtResource("4_8rn05")
rock = ExtResource("5_0x45c")
fruit = ExtResource("6_j2ca6")
quartz = ExtResource("7_b1tqv")
recipe_listing = ExtResource("8_m7dj6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_dibny")
theme_override_constants/line_spacing = -3
text = "Quartz Potion
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 1

[node name="RecipeContainer" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 1
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemTexture" type="TextureRect" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_dibny")
texture = ExtResource("2_475mh")
expand_mode = 1
stretch_mode = 5

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
theme = ExtResource("1_dibny")
text = "Craft
"

[node name="CraftingTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_craft_button_pressed"]
[connection signal="timeout" from="CraftingTimer" to="." method="_on_crafting_timer_timeout"]
